--- a/souvenir-akhir-tahun-kalender.html
+++ b/souvenir-akhir-tahun-kalender.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Souvenir Akhir Tahun: Pastikan Brand Anda Diingat Sepanjang 2026">
     <meta property="og:description"
         content="Mengapa kalender dan agenda masih menjadi souvenir paling powerful? Temukan strateginya di sini.">
-    <meta property="og:image" content="assets/souvenir-kalender-agenda-tahun-baru.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/souvenir-kalender-agenda-tahun-baru.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/souvenir-akhir-tahun-kalender">
     <meta property="og:type" content="article">
 
