--- a/souvenir-gadget-elektronik.html
+++ b/souvenir-gadget-elektronik.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Pusat Souvenir Gadget Kantor & Elektronik Premium (Garansi Resmi)">
     <meta property="og:description"
         content="Mengapa Gadget menjadi raja souvenir di tahun 2026? Simak panduan lengkap memilih elektronik yang aman, awet, dan berkesan untuk klien VVIP.">
-    <meta property="og:image" content="assets/category-gadget.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/category-gadget.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/souvenir-gadget-elektronik">
     <meta property="og:type" content="article">
 
