--- a/souvenir-perusahaan-eksklusif.html
+++ b/souvenir-perusahaan-eksklusif.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Souvenir Perusahaan Eksklusif & Premium Gift Set (Katalog 2026)">
     <meta property="og:description"
         content="Jangan pertaruhkan reputasi brand Anda dengan souvenir murahan. Simak panduan lengkap memilih corporate gift set yang mewah dan berkelas.">
-    <meta property="og:image" content="assets/executive-hardbox.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/executive-hardbox.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/souvenir-perusahaan-eksklusif">
     <meta property="og:type" content="article">
 
