--- a/souvenir-promosi-doktor-guru-besar.html
+++ b/souvenir-promosi-doktor-guru-besar.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="7 Ide Souvenir Promosi Doktor yang Berkesan untuk Dewan Penguji">
     <meta property="og:description"
         content="Jangan sampai salah pilih bingkisan untuk momen sakral akademik Anda. Temukan inspirasi gift set premium di sini.">
-    <meta property="og:image" content="assets/souvenir-promosi-doktor-cover.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/souvenir-promosi-doktor-cover.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/souvenir-promosi-doktor-guru-besar">
     <meta property="og:type" content="article">
 
