--- a/souvenir-ramah-lingkungan.html
+++ b/souvenir-ramah-lingkungan.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Sustainable Gifts: Tunjukkan Peduli Bumi dengan Souvenir Kantor">
     <meta property="og:description"
         content="Saatnya beralih ke souvenir yang berdampak positif. Kurangi plastik, pilih Bambu & Daur Ulang. Tingkatkan citra perusahaan hijau Anda.">
-    <meta property="og:image" content="assets/souvenir-ramah-lingkungan.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/souvenir-ramah-lingkungan.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/souvenir-ramah-lingkungan">
     <meta property="og:type" content="article">
 
