--- a/souvenir-reuni-alumni.html
+++ b/souvenir-reuni-alumni.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Souvenir Reuni Akbar: Hidupkan Kembali Kenangan Manis Kampus">
     <meta property="og:description"
         content="Ide merchandise reuni yang memorable: Polo Shirt seragam angkatan, Payung Golf eksklusif, dan Mug nostalgia.">
-    <meta property="og:image" content="assets/souvenir-reuni-alumni.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/souvenir-reuni-alumni.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/souvenir-reuni-alumni">
     <meta property="og:type" content="article">
 
