--- a/souvenir-rups-saham.html
+++ b/souvenir-rups-saham.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Souvenir RUPS Saham: Simbol Stabilitas dan Prestise Perusahaan">
     <meta property="og:description"
         content="Jangan sampai salah pilih bingkisan untuk pemegang saham. Temukan standar merchandise korporat level tinggi di sini.">
-    <meta property="og:image" content="assets/souvenir-rups-saham.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/souvenir-rups-saham.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/souvenir-rups-saham">
     <meta property="og:type" content="article">
 
