--- a/souvenir-tumbler-botol.html
+++ b/souvenir-tumbler-botol.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Pusat Souvenir Tumbler & Botol Minum Custom Logo (Terlengkap)">
     <meta property="og:description"
         content="Cari vendor souvenir tumbler custom terbaik? Temukan perbandingan lengkap bahan plastik, stainless, hingga aluminium. Harga grosir, cetak logo presisi, dan varian terlengkap ada di sini.">
-    <meta property="og:image" content="assets/drinkware-thermos.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/drinkware-thermos.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/souvenir-tumbler-botol">
     <meta property="og:type" content="article">
 
