--- a/speaker-bluetooth-custom-logo.html
+++ b/speaker-bluetooth-custom-logo.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Speaker Bluetooth Mini: Souvenir Unik untuk Klien Milenial">
     <meta property="og:description"
         content="Hadiah yang menyenangkan dan pasti dipakai. Suara jernih dengan logo perusahaan Anda yang menyala (Light up logo).">
-    <meta property="og:image" content="assets/gadget-speaker.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/gadget-speaker.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/speaker-bluetooth-custom-logo">
     <meta property="og:type" content="article">
 
