--- a/tas-belacu-goni.html
+++ b/tas-belacu-goni.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Tas Belacu & Goni: Sentuhan Vintage untuk Brand Modern">
     <meta property="og:description"
         content="Kembali ke alam dengan Tas Belacu krem yang klasik atau Tas Goni yang bertekstur kuat. Solusi packaging yang bisa dipakai berulang kali.">
-    <meta property="og:image" content="assets/tas-belacu-goni.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/tas-belacu-goni.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/tas-belacu-goni">
     <meta property="og:type" content="article">
 
