--- a/tas-goodie-bag.html
+++ b/tas-goodie-bag.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Katalog Goodie Bag: Solusi Packaging Ramah Lingkungan">
     <meta property="og:description"
         content="Tinggalkan kantong plastik! Beralihlah ke Tas Spunbond dan Tote Bag Kanvas yang awet dan efektif sebagai media branding berjalan.">
-    <meta property="og:image" content="assets/katalog-goodie-bag.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/katalog-goodie-bag.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/tas-goodie-bag">
     <meta property="og:type" content="article">
 
