--- a/tas-seminar-laptop-vs-ransel.html
+++ b/tas-seminar-laptop-vs-ransel.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Tas Seminar Laptop vs Ransel: Mana yang Lebih Efektif?">
     <meta property="og:description"
         content="Panduan memilih jenis tas seminar yang tepat. Apakah peserta Anda lebih butuh formalitas tas jinjing atau mobilitas ransel?">
-    <meta property="og:image" content="assets/lifestyle-bags.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/lifestyle-bags.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/tas-seminar-laptop-vs-ransel">
     <meta property="og:type" content="article">
 
