--- a/tips-memilih-paket-seminar.html
+++ b/tips-memilih-paket-seminar.html
@@ -16,7 +16,7 @@
     <meta property="og:title" content="Tips Memilih Paket Seminar Kit Efektif & Hemat Budget 2026">
     <meta property="og:description"
         content="Jangan sampai seminar kit Anda berakhir di tempat sampah! Simak strategi memilih item yang fungsional, elegan, dan tetap ramah di kantong.">
-    <meta property="og:image" content="assets/seminar-kit.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/seminar-kit.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/tips-memilih-paket-seminar">
     <meta property="og:type" content="article">
 
