--- a/topi-promosi-custom.html
+++ b/topi-promosi-custom.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Topi Promosi Custom: Iklan Berjalan di Kepala Klien Anda">
     <meta property="og:description"
         content="Lengkapi seragam lapangan Anda dengan Topi Custom. Simak perbedaan bahan Rafel vs Drill dan jenis bordir yang awet disini.">
-    <meta property="og:image" content="assets/topi-promosi.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/topi-promosi.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/topi-promosi-custom">
     <meta property="og:type" content="article">
 
