--- a/tumbler-bambu-grafir.html
+++ b/tumbler-bambu-grafir.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Tumbler Bambu Estetik & Unik: Souvenir Eco-Green Kekinian">
     <meta property="og:description"
         content="Tunjukkan kepedulian lingkungan Anda dengan souvenir Tumbler Bambu. Desain natural, jeroan stainless tahan panas, dan grafir logo yang abadi.">
-    <meta property="og:image" content="assets/eco-bamboo.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/eco-bamboo.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/tumbler-bambu-grafir">
     <meta property="og:type" content="article">
 
