--- a/tumbler-insert-paper.html
+++ b/tumbler-insert-paper.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Tumbler Insert Paper: Solusi Souvenir Murah & Ekspres">
     <meta property="og:description"
         content="Butuh souvenir cepat dengan full color printing? Tumbler insert paper adalah jawabannya. Pengerjaan bisa 1 hari!">
-    <meta property="og:image" content="assets/express-tumbler.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/express-tumbler.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/tumbler-insert-paper">
     <meta property="og:type" content="article">
 
