--- a/tumbler-stainless-vacuum.html
+++ b/tumbler-stainless-vacuum.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Tumbler Stainless Vacuum Custom - Souvenir Premium Tahan Panas">
     <meta property="og:description"
         content="Cetak logo perusahaan di tumbler stainless premium (Thermos). Tahan panas 12 jam, anti bocor, dan elegan.">
-    <meta property="og:image" content="assets/drinkware-thermos.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/drinkware-thermos.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/tumbler-stainless-vacuum">
     <meta property="og:type" content="article">
 
@@ -372,7 +372,8 @@
                         teknologi isolasi yang canggih. Bukan sekadar wadah air, ia adalah alat yang menjaga kenyamanan
                         klien Anda dengan memastikan kopi pagi mereka tetap panas hingga jam makan siang. Artikel ini
                         akan mengupas tuntas mengapa tumbler stainless vacuum adalah investasi terbaik untuk branding
-                        perusahaan Anda di tahun 2026.</p>
+                        perusahaan Anda di tahun 2026.
+                    </p>
 
                     <!-- TOC -->
                     <div class="toc-box">
