--- a/vendor-souvenir-kantor-jakarta.html
+++ b/vendor-souvenir-kantor-jakarta.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Vendor Souvenir Kantor Jakarta: Solusi Cepat Kebutuhan Korporat">
     <meta property="og:description"
         content="Deadline mepet? Maroon Souvenir siap melayani kebutuhan merchandise kantor Anda di area Jabodetabek dengan kualitas premium.">
-    <meta property="og:image" content="assets/vendor-souvenir-jakarta.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/vendor-souvenir-jakarta.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/vendor-souvenir-kantor-jakarta">
     <meta property="og:type" content="article">
 
