--- a/vendor-souvenir-kantor-jogja.html
+++ b/vendor-souvenir-kantor-jogja.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Vendor Souvenir Kantor Jogja: Merchandise Unik & Berbudaya">
     <meta property="og:description"
         content="Cari souvenir dengan sentuhan budaya Jogja? Temukan koleksi merchandise etnik dan seminar kit kreatif di sini.">
-    <meta property="og:image" content="assets/vendor-souvenir-jogja.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/vendor-souvenir-jogja.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/vendor-souvenir-kantor-jogja">
     <meta property="og:type" content="article">
 
