--- a/vendor-souvenir-kantor-malang.html
+++ b/vendor-souvenir-kantor-malang.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Vendor Souvenir Kantor Malang: Solusi Merchandise Kreatif Malang Raya">
     <meta property="og:description"
         content="Melayani kebutuhan seminar kit kampus dan souvenir hotel di Malang & Batu dengan sentuhan desain kreatif khas Arema.">
-    <meta property="og:image" content="assets/vendor-souvenir-malang.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/vendor-souvenir-malang.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/vendor-souvenir-kantor-malang">
     <meta property="og:type" content="article">
 
