--- a/vendor-souvenir-kantor-profesional.html
+++ b/vendor-souvenir-kantor-profesional.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Vendor Souvenir Kantor Profesional: Kunci Sukses Branding Anda">
     <meta property="og:description"
         content="Jangan pertaruhkan citra perusahaan Anda dengan souvenir murahan. Simak ciri-ciri vendor souvenir profesional yang wajib Anda tahu sebelum deal.">
-    <meta property="og:image" content="assets/vendor-souvenir-kantor.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/vendor-souvenir-kantor.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/vendor-souvenir-kantor-profesional">
     <meta property="og:type" content="article">
 
