--- a/vendor-souvenir-kantor-surabaya.html
+++ b/vendor-souvenir-kantor-surabaya.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Vendor Souvenir Kantor Surabaya: Solusi Merchandise Korporat Jawa Timur">
     <meta property="og:description"
         content="Cari vendor souvenir di Surabaya? Maroon Souvenir hadir dengan workshop lokal untuk layanan lebih cepat dan efisien.">
-    <meta property="og:image" content="assets/vendor-souvenir-surabaya.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/vendor-souvenir-surabaya.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/vendor-souvenir-kantor-surabaya">
     <meta property="og:type" content="article">
 
@@ -773,5 +773,3 @@
 </body>
 
 </html>
-
-
