--- a/souvenir-kampus-universitas.html
+++ b/souvenir-kampus-universitas.html
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Pusat Souvenir Kampus: Solusi Merchandise Akademik dari Maba hingga Profesor">
     <meta property="og:description"
         content="Temukan katalog lengkap merchandise universitas untuk berbagai level acara. Kualitas premium untuk institusi pendidikan modern.">
-    <meta property="og:image" content="assets/souvenir-kampus-universitas.webp">
+    <meta property="og:image" content="https://hampersmalang.web.id/assets/souvenir-kampus-universitas.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/souvenir-kampus-universitas">
     <meta property="og:type" content="article">
 
