--- a/flashdisk-kartu-promosi.html
+++ b/flashdisk-kartu-promosi.html
@@ -35,7 +35,7 @@
             "author": {
                 "@type": "Organization",
                 "name": "Maroon Souvenir",
-                "url": "https://hampersmalang.web.id/"
+                "url": "https://hampersmalang.web.id"
             },
             "publisher": {
                 "@type": "Organization",
