--- a/powerbank-custom-souvenir.html
+++ b/powerbank-custom-souvenir.html
@@ -35,7 +35,7 @@
             "author": {
                 "@type": "Organization",
                 "name": "Maroon Souvenir",
-                "url": "https://hampersmalang.web.id/"
+                "url": "https://hampersmalang.web.id"
             },
             "publisher": {
                 "@type": "Organization",
