--- a/packages.html
+++ b/packages.html
@@ -41,14 +41,14 @@
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "4.9",
-        "reviewCount": "1250"
+        "reviewCount": 1250
       },
       "offers": {
         "@type": "AggregateOffer",
         "lowPrice": "35000",
         "highPrice": "500000",
         "priceCurrency": "IDR",
-        "offerCount": "7"
+        "offerCount": 7
       }
     }
     </script>
