--- a/tumbler-stainless-vacuum.html
+++ b/tumbler-stainless-vacuum.html
@@ -37,7 +37,7 @@
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "4.9",
-        "reviewCount": "128"
+        "reviewCount": 128
       }
     }
     </script>
@@ -50,7 +50,7 @@
         "name": "Berapa lama tumbler vacuum ini menahan panas?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "Dengan teknologi Double Wall Vacuum Insulation, tumbler kami dapat menahan suhu air panas (awal 95Â°C) menjadi hangat (40Â°C-50Â°C) selama kurang lebih 8 hingga 12 jam, tergantung frekuensi buka tutup."
+          "text": "Dengan teknologi Double Wall Vacuum Insulation, tumbler kami dapat menahan suhu air panas (awal 95\u00B0C) menjadi hangat (40\u00B0C-50\u00B0C) selama kurang lebih 8 hingga 12 jam, tergantung frekuensi buka tutup."
         }
       }, {
         "@type": "Question",
