--- a/package-conference-pro.html
+++ b/package-conference-pro.html
@@ -325,11 +325,17 @@
         "@type": "Brand",
         "name": "Maroon Souvenir"
       },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.7",
+        "reviewCount": 500
+      },
       "offers": {
         "@type": "Offer",
         "url": "https://hampersmalang.web.id/package-conference-pro",
         "priceCurrency": "IDR",
         "price": "45000",
+        "priceValidUntil": "2026-12-31",
         "availability": "https://schema.org/InStock",
         "itemCondition": "https://schema.org/NewCondition"
       }
