--- a/package-deal-closer.html
+++ b/package-deal-closer.html
@@ -326,11 +326,17 @@
         "@type": "Brand",
         "name": "Maroon Souvenir"
       },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "5.0",
+        "reviewCount": 85
+      },
       "offers": {
         "@type": "Offer",
         "url": "https://hampersmalang.web.id/package-deal-closer",
         "priceCurrency": "IDR",
         "price": "250000",
+        "priceValidUntil": "2026-12-31",
         "availability": "https://schema.org/InStock",
         "itemCondition": "https://schema.org/NewCondition"
       }
