--- a/package-employee-kit.html
+++ b/package-employee-kit.html
@@ -333,11 +333,17 @@
         "@type": "Brand",
         "name": "Maroon Souvenir"
       },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.8",
+        "reviewCount": 250
+      },
       "offers": {
         "@type": "Offer",
         "url": "https://hampersmalang.web.id/package-employee-kit",
         "priceCurrency": "IDR",
         "price": "185000",
+        "priceValidUntil": "2026-12-31",
         "availability": "https://schema.org/InStock",
         "itemCondition": "https://schema.org/NewCondition"
       }
