--- a/package-gift-set-premium.html
+++ b/package-gift-set-premium.html
@@ -326,11 +326,17 @@
         "@type": "Brand",
         "name": "Maroon Souvenir"
       },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.9",
+        "reviewCount": 110
+      },
       "offers": {
         "@type": "Offer",
         "url": "https://hampersmalang.web.id/package-gift-set-premium",
         "priceCurrency": "IDR",
         "price": "125000",
+        "priceValidUntil": "2026-12-31",
         "availability": "https://schema.org/InStock",
         "itemCondition": "https://schema.org/NewCondition"
       }
