--- a/package-hampers-exclusive.html
+++ b/package-hampers-exclusive.html
@@ -331,11 +331,17 @@
         "@type": "Brand",
         "name": "Maroon Souvenir"
       },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.8",
+        "reviewCount": 200
+      },
       "offers": {
         "@type": "Offer",
         "url": "https://hampersmalang.web.id/package-hampers-exclusive",
         "priceCurrency": "IDR",
         "price": "150000",
+        "priceValidUntil": "2026-12-31",
         "availability": "https://schema.org/InStock",
         "itemCondition": "https://schema.org/NewCondition"
       }
