--- a/package-merchandise-exclusive.html
+++ b/package-merchandise-exclusive.html
@@ -330,11 +330,17 @@
         "@type": "Brand",
         "name": "Maroon Souvenir"
       },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.7",
+        "reviewCount": 300
+      },
       "offers": {
         "@type": "Offer",
         "url": "https://hampersmalang.web.id/package-merchandise-exclusive",
         "priceCurrency": "IDR",
         "price": "125000",
+        "priceValidUntil": "2026-12-31",
         "availability": "https://schema.org/InStock",
         "itemCondition": "https://schema.org/NewCondition"
       }
