--- a/package-earth-saver.html
+++ b/package-earth-saver.html
@@ -327,11 +327,17 @@
         "@type": "Brand",
         "name": "Maroon Souvenir"
       },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.8",
+        "reviewCount": 150
+      },
       "offers": {
         "@type": "Offer",
         "url": "https://hampersmalang.web.id/package-earth-saver",
         "priceCurrency": "IDR",
         "price": "95000",
+        "priceValidUntil": "2026-12-31",
         "availability": "https://schema.org/InStock",
         "itemCondition": "https://schema.org/NewCondition"
       }
